# GammaBayes

./: .gitignore  .readthedocs.yaml  2dtester.ipynb  3dtester.ipynb  LICENSE  MANIFEST.IN  README.md  SS_DM_Prior.py  SpectrumTester.ipynb  Untitled.ipynb  brutesampler.py  calcposterior.py  calculateirfvalues.py  checker.ipynb  classchecker.ipynb  combine_results.py  compressresults.py  darkSUSYchecker.ipynb  datachecker.ipynb  differentirfmethod copy.ipynb  differentirfmethod.ipynb  dynestyrun.py  example_config_file.yaml  example_run_script.yaml  gc_background_checker.ipynb  gridsearch.py  integration.py  inverse_transform_sampling.py  irftester.ipynb  lambdarange.npy  likelihood.py  link_to_coupling.ipynb  logmassrange.npy  makejobsforme.py  makesripts.py  marginalisation.py  marginalisation_class.py  marginalisationdirect.py  marginalisationdirectmulti.py  marginalisationnested.py  (+46 more)
.ipynb_checkpoints/: SpectrumTester-checkpoint.ipynb  Untitled-checkpoint.ipynb  example_run_script-checkpoint.yaml  notebook_pipe_tester-checkpoint.ipynb  notebook_pipe_tester_config_file-checkpoint.ipynb
BFCalc/: BFCalcChecker.ipynb  BFInterp.py  __init__.py  creategriddata_and_check.py  createspectragrids.py
GammaBayes/: SS_DM_Prior.py  default_file_setup.py  gridsearch.py  marginalisation_class.py  ozstarscriptgen.py  ozstarsetup.sh  plotting.py  setup.py  utils.py  utils3d.py
GammaBayes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Misc/: multiprocesstester.py  segmentationtester.py
aux_notebooks/: checker.ipynb  darkSUSYchecker.ipynb  irftester.ipynb
(+58827 files in other folders)
