[build-system]
requires = [
    "setuptools>=54",
    "wheel"
]

build-backend = "setuptools.build_meta"

[project]
name = "gammabayes"
authors = [
    {name = "Liam Pinchbeck", email = "Liam.Pinchbeck@monash.edu"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "astropy>=5.1",
    "corner==2.2.2",
    "dynesty==2.1.2",
    "jupyterlab>=3.6.3",
    "matplotlib==3.7.1",
    "scipy==1.10.1",
    "tqdm==4.65.0",
    "gammapy==0.20.1",
    "numpy==1.23.3"

]
