[metadata]
name = GammaBayes
version = 0.0.12
author = Liam Pinchbeck
author_email = Liam.Pinchbeck@monash.edu
url = https://github.com/lpin0002/GammaBayes
description = For analyzing CTA data for constraining dark matter parameters
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

    

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True


[options.command]
install = your_package.filesetup:CustomInstallCommand
